# computer-use-preview

./: README.md  pip-to-poetry.json  pyproject.toml  readme.ipynb
computer_use/: __init__.py  agent.py  main.py  prompt.py
computer_use/browserbase/: browserbase.py
tests/: test_agent.py  test_main.py
